NGINX Ingress Controller/MapIPtoSVC 1.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"creationTimestamp":"2022-05-06T09:28:15Z","name":"own-nplus-ip","namespace":"default","resourceVersion":"4038471","uid":"7e5d9a02-947a-436e-880b-4460d53497a5"},"spec":{"clusterIP":"None","clusterIPs":["None"],"internalTrafficPolicy":"Cluster","ipFamilies":["IPv4","IPv6"],"ipFamilyPolicy":"RequireDualStack","ports":[{"name":"app","port":80,"protocol":"TCP","targetPort":80}],"sessionAffinity":"None","type":"ClusterIP"},"status [...]
  creationTimestamp: "2022-05-06T09:28:15Z"
  name: own-nplus-ip
  namespace: default
  resourceVersion: "4038901"
  uid: 7e5d9a02-947a-436e-880b-4460d53497a5
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
  - name: app
    port: 80
    protocol: TCP
    targetPort: 80
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
apiVersion: v1
kind: Endpoints
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Endpoints","metadata":{"annotations":{},"creationTimestamp":"2022-05-06T09:28:15Z","name":"own-nplus-ip","namespace":"default","resourceVersion":"4038472","uid":"b52016b2-cfd9-4c97-9989-2abecd089e8a"},"subsets":[{"addresses":[{"ip":"10.155.231.67"}],"ports":[{"name":"app","port":80,"protocol":"TCP"}]}]}
  creationTimestamp: "2022-05-06T09:28:15Z"
  name: own-nplus-ip
  namespace: default
  resourceVersion: "4039224"
  uid: b52016b2-cfd9-4c97-9989-2abecd089e8a
subsets:
- addresses:
  - ip: 10.155.231.67
  ports:
  - name: app
    port: 80
    protocol: TCP
